Fixed enumerate not using label=\arabic* with advisor

--- a/settings.tex
+++ b/settings.tex
@@ -90,8 +90,8 @@
 % https://tex.stackexchange.com/questions/148647/how-to-remove-space-before-enumerate
 % https://tex.stackexchange.com/questions/433543/behaviour-of-enumitem-setlist
 \advisor{}{
-\setlist*[enumerate]{nosep}
-\setlist*[enumerateoptional]{nosep}
+\setlist*[enumerate]{label=\arabic*,}
+\setlist*[enumerateoptional]{label=\arabic*,}
 }
 
 
