Fixed doubled spacing after each before text page titles

--- a/settings.tex
+++ b/settings.tex
@@ -299,6 +299,9 @@
   \makechapterstyle{fixedabntex2indentation}
   {%
     \renewcommand{\chapterheadstart}{}
+    \setlength{\beforechapskip}{20pt}
+    \setlength{\midchapskip}{20pt}
+    \setlength{\afterchapskip}{15pt}
 
     \ifx \chapternamenumlength \undefined
       \newlength{\chapternamenumlength}
