Fixed captions separator without spacing

--- a/settings.tex
+++ b/settings.tex
@@ -374,7 +374,7 @@
       }{}%
     }
 
-    \renewcommand{\ABNTEXcaptiondelim}{\textendash}
+    \renewcommand{\ABNTEXcaptiondelim}{~\textendash~}
     \renewcommand{\afterchapternum}{}
 
     % Impressão do capítulo não numerado
