Fixed the abstract entry being showed sometimes with a empty line
before it:
https://tex.stackexchange.com/questions/513020/how-can-i-stop-this-useless-empty-line-popping-up-in-the-middle-of-my-lists

--- a/settings.tex
+++ b/settings.tex
@@ -158,7 +158,7 @@
 \else
   \DeclareFieldFormat{abstract}%
   {%
-    \vspace*{-0.5mm}\par\justifying
+    \par\justifying
     \begin{adjustwidth}{1cm}{}
       \textbf{\bibsentence\bibstring{abstract}:} #1
     \end{adjustwidth}
